--- a/admin.html
+++ b/admin.html
@@ -96,8 +96,10 @@
               Carpentry, where each design is a fusion of sophistication and
               functionality, bringing a touch of modern refinement to your home
             </p>
-            <a class="btn btn-primary btn-xl">EDIT TEXT</a>
-            <a class="btn btn-primary btn-xl">DELETE TEXT</a>
+            <a class="btn btn-primary btn-xl">View About</a>
+            <a class="btn btn-primary btn-xl">Add About</a>
+            <a class="btn btn-primary btn-xl">Edit About</a>
+            <a class="btn btn-primary btn-xl">Delete About</a>
           </div>
         </div>
       </div>
@@ -121,8 +123,10 @@
               dedication to excellence — a commitment that extends beyond the
               workshop and into the heart of your home.
             </p>
-            <a class="btn btn-primary btn-xl">EDIT TEXT</a>
-            <a class="btn btn-primary btn-xl">DELETE TEXT</a>
+            <a class="btn btn-primary btn-xl">View About Us</a>
+            <a class="btn btn-primary btn-xl">Add About Us</a>
+            <a class="btn btn-primary btn-xl">Edit About Us</a>
+            <a class="btn btn-primary btn-xl">Delete About Us</a>
           </div>
         </div>
       </div>
@@ -132,7 +136,11 @@
       <!--First row of Services-->
       <div class="container px-4 px-lg-5">
         <h2 class="text-center mt-0">At Your Service</h2>
+        <a class="btn btn-primary btn-xl" style="margin-left: 550px;"
+          >Add service</a
+        >
         <hr class="divider" />
+
         <div class="row gx-4 gx-lg-5">
           <div class="col-lg-3 col-md-6 text-center">
             <div class="mt-5">
@@ -146,10 +154,11 @@
                 the specifications for your custom-made products, be it doors,
                 kitchens, tables or wardrobes
               </p>
-              <br />
-              <a class="btn btn-primary btn-xl">EDIT TEXT</a>
-              <br /><br />
-              <a class="btn btn-primary btn-xl">DELETE TEXT</a>
+              <!-- <br /> -->
+              <a class="btn btn-primary btn-xl">view service</a>
+              <!-- <br /><br /> -->
+              <a class="btn btn-primary btn-xl">edit service</a>
+              <a class="btn btn-primary btn-xl">delete service</a>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
@@ -165,10 +174,11 @@
                 of the manufacturing process
                 <br /><br />
               </p>
-              <br />
-              <a class="btn btn-primary btn-xl">EDIT TEXT</a>
-              <br /><br />
-              <a class="btn btn-primary btn-xl">DELETE TEXT</a>
+              <!-- <br /> -->
+              <a class="btn btn-primary btn-xl">view service</a>
+              <!-- <br /><br /> -->
+              <a class="btn btn-primary btn-xl">edit service</a>
+              <a class="btn btn-primary btn-xl">delete service</a>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
@@ -184,10 +194,11 @@
                 professionals bring the craftsmanship to your doorstep,
                 providing seamless installation for your desired products
               </p>
-              <br />
-              <a class="btn btn-primary btn-xl">EDIT TEXT</a>
-              <br /><br />
-              <a class="btn btn-primary btn-xl">DELETE TEXT</a>
+              <!-- <br /> -->
+              <a class="btn btn-primary btn-xl">view service</a>
+              <!-- <br /><br /> -->
+              <a class="btn btn-primary btn-xl">edit service</a>
+              <a class="btn btn-primary btn-xl">delete service</a>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
@@ -203,10 +214,11 @@
                 ensuring the longevity and satisfaction of your purchased
                 products
               </p>
-              <br />
-              <a class="btn btn-primary btn-xl">EDIT TEXT</a>
-              <br /><br />
-              <a class="btn btn-primary btn-xl">DELETE TEXT</a>
+              <!-- <br /> -->
+              <a class="btn btn-primary btn-xl">view service</a>
+              <!-- <br /><br /> -->
+              <a class="btn btn-primary btn-xl">edit service</a>
+              <a class="btn btn-primary btn-xl">delete service</a>
             </div>
           </div>
         </div>
@@ -234,8 +246,9 @@
                 <div class="project-name">Mediapan Kitchen</div>
               </div>
             </a>
-            <a class="btn btn-primary btn-xl">REPLACE PICTURE</a>
-            <a class="btn btn-primary btn-xl">DELETE PICTURE</a>
+            <a class="btn btn-primary btn-xl">view product</a>
+            <a class="btn btn-primary btn-xl">edit product</a>
+            <a class="btn btn-primary btn-xl">delete product</a>
           </div>
           <div class="col-lg-4 col-sm-6">
             <a
@@ -256,8 +269,9 @@
               </div>
             </a>
 
-            <a class="btn btn-primary btn-xl">REPLACE PICTURE</a>
-            <a class="btn btn-primary btn-xl">DELETE PICTURE</a>
+            <a class="btn btn-primary btn-xl">view product</a>
+            <a class="btn btn-primary btn-xl">edit product</a>
+            <a class="btn btn-primary btn-xl">delete product</a>
           </div>
           <div class="col-lg-4 col-sm-6">
             <a
@@ -275,9 +289,9 @@
                 <div class="project-name">Mediapan Wardrobe</div>
               </div>
             </a>
-
-            <a class="btn btn-primary btn-xl">REPLACE PICTURE</a>
-            <a class="btn btn-primary btn-xl">DELETE PICTURE</a>
+            <a class="btn btn-primary btn-xl">view product</a>
+            <a class="btn btn-primary btn-xl">edit product</a>
+            <a class="btn btn-primary btn-xl">delete product</a>
           </div>
           <!--Second Row-->
           <div class="col-lg-4 col-sm-6">
@@ -296,8 +310,9 @@
                 <div class="project-name">Indoor Doors</div>
               </div>
             </a>
-            <a class="btn btn-primary btn-xl">REPLACE PICTURE</a>
-            <a class="btn btn-primary btn-xl">DELETE PICTURE</a>
+            <a class="btn btn-primary btn-xl">view product</a>
+            <a class="btn btn-primary btn-xl">edit product</a>
+            <a class="btn btn-primary btn-xl">delete product</a>
           </div>
           <div class="col-lg-4 col-sm-6">
             <a
@@ -315,8 +330,9 @@
                 <div class="project-name">Wooden Wardrobe</div>
               </div>
             </a>
-            <a class="btn btn-primary btn-xl">REPLACE PICTURE</a>
-            <a class="btn btn-primary btn-xl">DELETE PICTURE</a>
+            <a class="btn btn-primary btn-xl">view product</a>
+            <a class="btn btn-primary btn-xl">edit product</a>
+            <a class="btn btn-primary btn-xl">delete product</a>
           </div>
           <div class="col-lg-4 col-sm-6">
             <a
@@ -334,8 +350,9 @@
                 <div class="project-name">Dining Table</div>
               </div>
             </a>
-            <a class="btn btn-primary btn-xl">REPLACE PICTURE</a>
-            <a class="btn btn-primary btn-xl">DELETE PICTURE</a>
+            <a class="btn btn-primary btn-xl">view product</a>
+            <a class="btn btn-primary btn-xl">edit product</a>
+            <a class="btn btn-primary btn-xl">delete product</a>
           </div>
           <!--Third Row-->
           <div class="col-lg-4 col-sm-6">
@@ -354,8 +371,9 @@
                 <div class="project-name">Table and Chairs</div>
               </div>
             </a>
-            <a class="btn btn-primary btn-xl">REPLACE PICTURE</a>
-            <a class="btn btn-primary btn-xl">DELETE PICTURE</a>
+            <a class="btn btn-primary btn-xl">view product</a>
+            <a class="btn btn-primary btn-xl">edit product</a>
+            <a class="btn btn-primary btn-xl">delete product</a>
           </div>
           <div class="col-lg-4 col-sm-6">
             <a
@@ -377,8 +395,9 @@
                 </div>
               </div>
             </a>
-            <a class="btn btn-primary btn-xl">REPLACE PICTURE</a>
-            <a class="btn btn-primary btn-xl">DELETE PICTURE</a>
+            <a class="btn btn-primary btn-xl">view product</a>
+            <a class="btn btn-primary btn-xl">edit product</a>
+            <a class="btn btn-primary btn-xl">delete product</a>
           </div>
           <div class="col-lg-4 col-sm-6">
             <a
@@ -396,8 +415,9 @@
                 <div class="project-name">Mahogany Wood</div>
               </div>
             </a>
-            <a class="btn btn-primary btn-xl">REPLACE PICTURE</a>
-            <a class="btn btn-primary btn-xl">DELETE PICTURE</a>
+            <a class="btn btn-primary btn-xl">view product</a>
+            <a class="btn btn-primary btn-xl">edit product</a>
+            <a class="btn btn-primary btn-xl">delete product</a>
           </div>
           <!--Fourth Row-->
           <div class="col-lg-4 col-sm-6">
@@ -416,8 +436,9 @@
                 <div class="project-name">Mediapan Matte Kitchen</div>
               </div>
             </a>
-            <a class="btn btn-primary btn-xl">REPLACE PICTURE</a>
-            <a class="btn btn-primary btn-xl">DELETE PICTURE</a>
+            <a class="btn btn-primary btn-xl">view product</a>
+            <a class="btn btn-primary btn-xl">edit product</a>
+            <a class="btn btn-primary btn-xl">delete product</a>
           </div>
           <div class="col-lg-4 col-sm-6">
             <a
@@ -437,8 +458,9 @@
                 <div class="project-name">Matte Wooden Kitchen</div>
               </div>
             </a>
-            <a class="btn btn-primary btn-xl">REPLACE PICTURE</a>
-            <a class="btn btn-primary btn-xl">DELETE PICTURE</a>
+            <a class="btn btn-primary btn-xl">view product</a>
+            <a class="btn btn-primary btn-xl">edit product</a>
+            <a class="btn btn-primary btn-xl">delete product</a>
           </div>
           <div class="col-lg-4 col-sm-6">
             <a
@@ -456,12 +478,18 @@
                 <div class="project-name">Light Oak Cabinet</div>
               </div>
             </a>
-            <a class="btn btn-primary btn-xl">REPLACE PICTURE</a>
-            <a class="btn btn-primary btn-xl">DELETE PICTURE</a>
+            <a class="btn btn-primary btn-xl">view product</a>
+            <a class="btn btn-primary btn-xl">edit product</a>
+            <a class="btn btn-primary btn-xl">delete product</a>
           </div>
         </div>
       </div>
     </div>
+    <br /><br />
+    <a class="btn btn-primary btn-xl" style="margin-left: 600px;"
+      >add product to gallery</a
+    >
+    <br /><br />
 
     <!-- Call to action-->
     <section class="page-section bg-dark text-white bg-section-new">
@@ -536,6 +564,11 @@
             </div>
           </div>
         </div>
+        <br /><br />
+        <a class="btn btn-primary btn-xl" style="margin-left: 600px;"
+          >add new text</a
+        >
+        <br /><br />
       </div>
     </section>
     <!-- Contact-->
@@ -677,9 +710,10 @@
         </div>
         -->
       </div>
-      <div class="col-lg-8 align-self-baseline" style="margin-left: 600px;">
-        <a class="btn btn-primary btn-xl">EDIT FORM</a>
-        <a class="btn btn-primary btn-xl">DELETE FORM</a>
+      <div class="col-lg-8 align-self-baseline" style="margin-left: 500px;">
+        <a class="btn btn-primary btn-xl">view inquiries</a>
+        <a class="btn btn-primary btn-xl">edite inquiry </a>
+        <a class="btn btn-primary btn-xl">delete inquiry </a>
       </div>
 
       <!-- div class="container px-4 px-lg-5" -->
